# interviewprep

./: .gitignore  bairesdev_backend_mock_interviews.md  bairesdev_frontend_mock_interviews.md  bairesdev_fullstack_python_mock_interviews.md
.agents/: AGENTS.md
01_fastapi_sqlalchemy_postgres/: 01_postgres_aggregation_sqlalchemy.md  02_fastapi_runtime_internals.md  03_connection_pools_locking_and_concurrency.md  04_explain_analyze_partitioning_matviews.md  README.md
02_react_redux_swr_dashboard/: 01_react_dashboard_rendering_state.md  02_browser_apis_and_storage.md  03_error_boundaries_suspense_profiling.md  README.md
03_mock_interviews_and_scenarios/: 01_mock_qa_and_behavioral_drills.md  02_mock_interview_drills_scenarios.md  03_senior_rapid_fire_qa_bank.md  04_study_schedule_sun_to_wed.md  05_ninety_second_pitch_and_cv_walkthrough.md  06_recruiter_screen_salary_and_bairesdev_model.md  07_agile_scrum_speakable_primer.md  08_ccat_and_online_tests_primer.md  09_chatgpt_mock_interview_generator_prompt.md  README.md
03_mock_interviews_and_scenarios/battle_cards/: 01_fastapi_runtime.md  02_postgres_sqlalchemy.md  03_api_design_auth.md  (+3 more)
04_architecture_and_system_design/: 01_dashboard_system_architecture.md  02_modern_tooling_uv_vite.md  03_twelve_factor_config.md  04_project_structure_standards.md  05_design_patterns_reference.md  06_api_contracts_idempotency_pagination.md  07_oauth2_jwt_lifecycle.md  08_redis_caching_strategies.md  09_deployment_scaling_statelessness.md  README.md
05_networking_and_data_transport/: 01_networking_protocols_dashboard.md
06_testing_and_migrations/: 01_testing_and_migrations.md  02_test_pyramid_mocking_contracts.md
07_advanced_runtimes_and_compilers/: 01_advanced_python_node_typescript.md
frameworks_specifics/: 01_fastapi.md  02_sqlalchemy.md  03_alembic.md  04_pydantic.md  05_react.md  06_redux_toolkit.md  07_swr_axios.md  08_zod_formik.md  09_tailwind_chakra.md
gist_toolkit/: Dockerfile.backend  Dockerfile.frontend  bootstrap_fastapi.py  bootstrap_react_app.tsx  docker-compose.yml  pyproject.toml  tsconfig.json  vite.config.ts
usable_gists/: dashboard_presentational_container_split.tsx  fastapi_cors_compression_setup.py  fastapi_idempotency_and_rate_limit.py  fastapi_sqlalchemy_analytics_endpoint.py  postgres_window_mom_analytics.sql  pydantic_v2_strict_validation.py  pytest_async_api_assertions.py  pytest_conftest_async_db.py  python_async_context_manager.py  react_error_boundary_suspense_widget.tsx  react_formik_zod_filter_panel.tsx  react_swr_axios_client.ts  react_swr_widget_test.tsx  react_use_metrics_swr_hook.ts  react_use_websocket_metrics_hook.ts  redis_cache_aside_fastapi.py  redux_toolkit_dashboard_slice.ts  repository_pattern_sqlalchemy.py  sqlalchemy_select_for_update_optimistic.py  typescript_advanced_generics.ts  websocket_metrics_pusher_backend.py
virtual_banking_dashboard/: BUILD_GUIDE.md  README.md  docker-compose.yml
virtual_banking_dashboard/backend/: .env  Dockerfile  pyproject.toml
virtual_banking_dashboard/backend/app/: main.py
virtual_banking_dashboard/backend/app/api/: router.py
virtual_banking_dashboard/backend/app/api/v1/endpoints/: banking.py
virtual_banking_dashboard/backend/app/core/: config.py  database.py
virtual_banking_dashboard/backend/app/models/: banking.py
virtual_banking_dashboard/backend/app/repositories/: banking.py
virtual_banking_dashboard/backend/app/schemas/: banking.py
virtual_banking_dashboard/backend/tests/: conftest.py  test_banking.py
(+27 files in other folders)
