[project]
name = "production-app-backend"
version = "1.0.0"
description = "FastAPI backend template with SQLAlchemy 2.0, Alembic, and Pydantic validation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.12.0",
    "alembic>=1.18.5",
    "redis>=5.1.0",
    "celery>=5.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "ruff>=0.4.0",
    "black>=24.4.0",
]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ASYNC" # flake8-async rules
]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
