[project]
name = "virtual-bank-backend"
version = "0.1.0"
description = "Core banking aggregate dashboard backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30.0",
    "alembic>=1.18.5",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.10.0",
    "redis>=5.1.0",
    "anyio>=4.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.21.0",
]
